--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
   <!-- Hero Section -->
   <header class="hero">
     <h1>Hi, I'm Niloto Katy</h1>
-    <p>Student | Aspiring Talent | Html  Enthusiast</p>
+    <p>Student | Aspiring Talent | Coding  Enthusiast</p>
   </header>
 
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I am passionate about coding, building websites, and solving real-world problems with technology.
+      I am a student of St Joseph University currently persuing my degree in Bachelor of Computer Science. I am in 5th sem 3rd Year working towards achieving my goals. 
+      I am passionate about coding and building websites. I aspire to become a Web Developer.
+      I hope to help and work with different people to get to know their ideas and views on how things works. I wish to understand complex works and try to create my own one day.  
     </p>
   </section>
 
@@ -73,3 +75,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
